ai-chat/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-backend
  labels:
    app: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai
  template:
    metadata:
      labels:
        app: ai
    spec:
      hostNetwork: true  # Use the host's network stack
      containers:
        - name: ai-backend-container
          image: prathamesh1545/ai-backend:1
          ports:
            - containerPort: 8000
#      imagePullSecrets:
#        - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ai-backend-service
spec:
  selector:
    app: ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
