ai-chat/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-frontend
  labels:
    app: ai-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-frontend
  template:
    metadata:
      labels:
        app: ai-frontend
    spec:
      containers:
        - name: ai-frontend-container
          image: prathamesh1545/ai-frontend:1
          ports:
            - containerPort: 3000
#      imagePullSecrets:
#        - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ai-frontend-service
spec:
  selector:
    app: ai-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
